feat: add dependency on (and commands for) the SSEC CLI
---

resolves #12

--- a/pixi.toml
+++ b/pixi.toml
@@ -6,9 +6,16 @@ platforms = ["osx-arm64"]
 version = "0.1.0"
 
 [tasks]
+# pre-commit tasks
 pre-commit-install = "pre-commit install"
 pre-commit-all = "pre-commit run --all-files"
 pre-commit = "pre-commit run"
 
+# ssec-cli tasks
+ssec-setup = "ssec --install-completion"
+
 [dependencies]
 pre-commit = ">=4.3.0"
+
+[pypi-dependencies]
+ssec-cli = { git = "https://github.com/uw-ssec/ssec-cli.git" }
