--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,11 @@ pre-commit-install = "pre-commit install"
 pre-commit-all = "pre-commit run --all-files"
 pre-commit = "pre-commit run"
 
+onboard = { cmd = "ssec onboard", depends-on = [
+    "pre-commit-install",
+    "ssec-setup",
+] }
+
 # ssec-cli tasks
 ssec-setup = "ssec --install-completion"
 
