fix: fix issue template

--- a/.github/ISSUE_TEMPLATE/onboard.yml
+++ b/.github/ISSUE_TEMPLATE/onboard.yml
@@ -71,3 +71,9 @@ body:
 
         - [Contribution guidelines](./CONTRIBUTING.md)
         - [Code of Conduct](./CODE_OF_CONDUCT.md)
+  - type: textarea
+    id: questions
+    attributes:
+      label: Comments
+      description: Anything your onboardee should know?
+      placeholder: "Feel free to ask questions here!"
