fix template again

--- a/.github/ISSUE_TEMPLATE/onboard.yml
+++ b/.github/ISSUE_TEMPLATE/onboard.yml
@@ -16,7 +16,7 @@ body:
 
         ### Onboarding checklist
 
-        Instructions for the
+        Instructions for the following steps are provided below. Please check them off as you complete them!
 
         - [ ] Pixi installed
         - [ ] Onboarding run successfully
